# career_navigator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  tasks.txt
.github/workflows/: ci.yml
admin-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
admin-frontend/src/: App.tsx
docs/: analytics-notifications.md  architecture.md  assessments.md  context-diagram.md  deployment.md  er-model.md  event-contracts.md  identity-and-profile.md  interfaces.md  operations.md  recommendations.md  security.md  test-strategy.md  vacancy-pipeline.md
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css  main.tsx
infra/observability/: prometheus.yml
loadtests/: locustfile.py
loadtests/results/: light_stats.csv  light_stats_history.csv  recommendations_stats.csv  recommendations_stats_history.csv
plans/: ml-recommendation-system-plan.md
scripts/: backfill_classification.py  bootstrap.sh  clean_telegram_titles.sql  cleanup_empty_recommendation_sessions.sql  create_admin_user.py  diagnose_recommendations.sh  force_rerefresh_all_sessions.sql  requirements.txt  reseed_vacancies.py  seed_assessments.py  seed_hh_vacancies.py  seed_telegram_vacancies.py  telegram_channels.txt
services/admin-service/: Dockerfile  alembic.ini  entrypoint.sh
services/analytics-service/: Dockerfile  alembic.ini  entrypoint.sh
services/api-gateway/: Dockerfile  entrypoint.sh  requirements.txt
(+304 files in other folders)
