[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-nagigator"
version = "0.1.0"
description = "Career Navigator monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy",
  "alembic",
  "redis",
  "celery",
  "httpx",
  "aiogram",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "services*", "workers*"]
